// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render correctly with Button 1`] = `
.c4 {
  position: absolute;
  border-radius: 50%;
  opacity: 1;
  background: rgba(0,0,0,0.2);
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  border: 1px solid;
  border-radius: 0.25rem;
  line-height: 1.5;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: middle;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 100%;
  height: 2.25rem;
  padding: 0 1rem;
  font-size: 1rem;
  border-color: #e0e0e0;
  background-color: #ffffff;
  color: #1a1a1a;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c3:focus {
  outline: 0;
}

.c3:disabled,
.c3[disabled] {
  opacity: 0.7;
  cursor: default;
  pointer-events: none;
}

.c3::before {
  content: '';
  display: inline-block;
  position: relative;
  left: 0;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 0;
  height: 0;
  margin-right: 0;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c3 .c5 {
  cursor: pointer;
}

.c3 .c5 svg {
  fill: #1a1a1a;
}

.c3:hover {
  border-color: #3c5ad0;
  background-color: #f6f6f6;
}

.c1 {
  position: relative;
  border-bottom: 1px solid;
  border-color: #e0e0e0;
  font-size: 1rem;
  padding: 1rem;
}

.c1:last-child {
  border-bottom: 0;
}

.c2 {
  position: relative;
  border-bottom: 1px solid;
  border-color: #e0e0e0;
  font-size: 1rem;
  padding: 0.25rem;
}

.c2:last-child {
  border-bottom: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  width: 400px;
  background-color: #ffffff;
  border-color: #e0e0e0;
  border-radius: 0.5rem;
}

.c0 .c6:first-child {
  border-top-left-radius: calc(0.5rem - 1px);
  border-top-right-radius: calc(0.5rem - 1px);
}

.c0 .c6:last-child {
  border-bottom-right-radius: calc(0.5rem - 1px);
  border-bottom-left-radius: calc(0.5rem - 1px);
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Title
  </div>
  <div
    class="c1"
  >
    Content
  </div>
  <div
    class="c2"
  >
    <button
      class="c3"
      type="default"
    >
      With Button
      <div
        class="c4"
      />
    </button>
  </div>
</div>
`;

exports[`Card should render correctly with Card.Block 1`] = `
.c1 {
  position: relative;
  border-bottom: 1px solid;
  border-color: #e0e0e0;
  font-size: 1rem;
  padding: 1rem;
}

.c1:last-child {
  border-bottom: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  width: 400px;
  background-color: #ffffff;
  border-color: #e0e0e0;
  border-radius: 0.5rem;
}

.c0 .c2:first-child {
  border-top-left-radius: calc(0.5rem - 1px);
  border-top-right-radius: calc(0.5rem - 1px);
}

.c0 .c2:last-child {
  border-bottom-right-radius: calc(0.5rem - 1px);
  border-bottom-left-radius: calc(0.5rem - 1px);
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Title
  </div>
  <div
    class="c1"
  >
    Content
  </div>
  <div
    class="c1"
  >
    Footer
  </div>
</div>
`;

exports[`Card should render correctly with Card.Image 1`] = `
.c3 {
  position: relative;
  border-bottom: 1px solid;
  border-color: #e0e0e0;
  font-size: 1rem;
  padding: 1rem;
}

.c3:last-child {
  border-bottom: 0;
}

.c2 {
  overflow: hidden;
}

.c2 img {
  display: block;
  width: auto;
  max-width: 100%;
  height: auto;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  width: 400px;
  background-color: #ffffff;
  border-color: #e0e0e0;
  border-radius: 0.5rem;
}

.c0 .c1:first-child {
  border-top-left-radius: calc(0.5rem - 1px);
  border-top-right-radius: calc(0.5rem - 1px);
}

.c0 .c1:last-child {
  border-bottom-right-radius: calc(0.5rem - 1px);
  border-bottom-left-radius: calc(0.5rem - 1px);
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <img
      alt="placeholder"
      src="https://via.placeholder.com/400x300"
    />
  </div>
  <div
    class="c3"
  >
    Content
  </div>
</div>
`;

exports[`Card should render hoverable Card 1`] = `
.c1 {
  position: relative;
  border-bottom: 1px solid;
  border-color: #e0e0e0;
  font-size: 1rem;
  padding: 1rem;
}

.c1:last-child {
  border-bottom: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  box-shadow: 0 1px 4px 0 rgba(191,191,191,0.5);
  width: 400px;
  background-color: #ffffff;
  border-color: #e0e0e0;
  border-radius: 0.5rem;
}

.c0:hover {
  box-shadow: 0 4px 6px 0 rgba(191,191,191,0.5);
}

.c0 .c2:first-child {
  border-top-left-radius: calc(0.5rem - 1px);
  border-top-right-radius: calc(0.5rem - 1px);
}

.c0 .c2:last-child {
  border-bottom-right-radius: calc(0.5rem - 1px);
  border-bottom-left-radius: calc(0.5rem - 1px);
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Content
  </div>
</div>
`;
